<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">大橘子</string>
    <string name="action_settings">Settings</string>
    <string name="take_Photo">拍照</string>
    <string name="select_Image">选择图片</string>
    <string name="upload_Image">上传图片</string>
    
    <string name="title">标题</string>
    <string name="price">原价</string>
    <string name="costPrice">转让价</string>
    <string name="presentation">描述</string>
    <string name="category">分类</string>
    <string name="address">地址</string>
    <string name="tradeWay">交易方式</string>
    <string name="server">提供送货</string>
    <string name="save">保存</string>
    <string name="back">返回</string>
    
    <string-array name="TradeWay">
        <item>线上</item>
        <item>线下</item>
        <item>线上/线下</item>
    </string-array>
</resources>
