<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/takePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_Photo" />

        <Button
            android:id="@+id/selectImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_Image" />

        <com.bigoranger.bigoranger.MyGridView
            android:id="@+id/myGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/background_light"
            android:horizontalSpacing="5dp"
            android:numColumns="4"
            android:padding="10dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/costPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/costPrice"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/presentation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/presentation"
                android:lines="3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category" />

                <Spinner
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />

                <Spinner
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </Spinner>
            </LinearLayout>
			<!-- 交易方式下拉框 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tradeWay" />

                <Spinner
                    android:id="@+id/tradeWay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </Spinner>
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/service_Linerlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
            </LinearLayout>
            
            
          <!--    <com.bigoranger.bigoranger.MyGridView 
                android:id="@+id/service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
				android:numColumns="2"
				android:stretchMode="columnWidth"
                android:verticalSpacing="10dip"
                android:horizontalSpacing="10dip"/>-->
            
			<!-- 保存返回按钮 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back" />
            </LinearLayout>
    </LinearLayout>

</ScrollView>